web-infras/parser/tests/fixtures/esprima/es2017/async/invalid-await/invalid-await-parameter3/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (1,19)
1|class X { async f(await) {} }
 |                 ^
